# fast-stats

./: Cargo.toml  README.md
src/: fstats_f64.rs  fstats_float.rs  lib.rs  stats.rs
tests/: stddev_f64.rs  stddev_float.rs
