[package]
name = "fast-stats"
version = "0.1.1"
authors = ["James Wallbridge <james.wallbridge@gmail.com>"]
description = "Rust library for efficient calculation of statistics from streaming data"
repository = "https://github.com/jwallbridge/fast-stats"
documentation = "https://docs.rs/fast-stats"
readme = "README.md"
keywords = [ "statistics", "streaming", "stats", "stddev" ]
license = "MIT"
edition = "2021"

[dependencies]
num-traits = "0.2"
float-cmp = "0.9.0"